# depthweaver

./: .gitignore  LICENSE  README.md
Assets/Editor/: BuildHelper.cs  DepthWeightTuner.cs  HDRPSettingsValidator.cs  ProjectStructureSetup.cs  StudioSceneSetupWizard.cs
Assets/JavaScript/: depth-extractor.js
Assets/Scenes/: StudioScene.unity
Assets/ScriptableObjects/: UIShaderConfig.asset
Assets/Scripts/CEF/: CEFBridge.cs  CEFInputHandler.cs  CEFNativeBackend.cs  CEFTextureSource.cs  IBrowserBackend.cs  NativePluginInterop.cs
Assets/Scripts/Camera/: OrbitCameraController.cs
Assets/Scripts/Core/: ITextureSource.cs  StaticTextureSource.cs  TexturePipelineManager.cs  UIShaderBootstrap.cs  UIShaderConfig.cs
Assets/Scripts/Environment/: AtmosphereModule.cs  HDRPSkyModule.cs  IEnvironmentModule.cs  NaturalEnvironmentBuilder.cs  ProceduralGrassModule.cs  ProceduralTerrainModule.cs  SunLightModule.cs
Assets/Scripts/Rendering/: QuadrantLightSystem.cs  ScreenLightController.cs  ScreenMeshGenerator.cs  StudioSceneBuilder.cs
Assets/Scripts/Studio/: StudioEnvironment.cs
Assets/Scripts/UI/: PerformanceProfiler.cs
Assets/Settings/: HDRP High Fidelity.asset
Assets/Settings/HDRPDefaultResources/: DefaultSettingsVolumeProfile.asset  HDRenderPipelineGlobalSettings.asset
Assets/Shaders/: UIShaderDisplacement_Simple.shader
NativePlugin/: CMakeLists.txt
NativePlugin/src/: browser_app.cpp  browser_app.h  browser_client.cpp  browser_client.h  cef_helper_main.cpp  cef_plugin.cpp  cef_plugin.h  render_handler.cpp  render_handler.h
NativePlugin/src/helper/: Info.plist
ProjectSettings/: ProjectSettings.asset  QualitySettings.asset
